# notepad--

./: .gitignore  CMakeLists.txt  Makefile  Ndd使用说明.CHM  README.md  README_EN.md  RealCompare.pro  alignwin.cpp  alignwin.h  alignwin.ui  changelog.txt  cmake.md  jsondeploy.cpp  linux-appimage.mk  linux-debian.mk  linux-universal.mk  linux-uos.mk  linux.mk  macos.mk  main.cpp  netregister.cpp  netregister.h  rcglobal.h  tree  userregister.cpp  userregister.h  userregister.ui  win-mingw-make-msbuild.mk  windows-universal.mk  windows.bat  windows.mk  插件编程开发说明.docx
3rd_plugins_cache/: README.md
cceditor/: ccnotepad.cpp
cmake/: DebPackageConfig.cmake  NoteadPlugin-Linux-Development.md  NotepadPluginConfig.cmake.in  SparkAppimageConfig.cmake  SparkCMakeDebugConfig.cmake  SparkCMakeInfoAfterConfig.cmake  SparkCMakeInfoBeforeConfig.cmake  SparkDebPackageConfig.cmake  SparkDesktopMacros.cmake  SparkEnvConfig.cmake  SparkExternalProject.cmake  SparkFindQt5Config.cmake  SparkFindQt6Config.cmake  SparkInstallMacrosConfig.cmake  SparkMacrosConfig.cmake  SparkMacrosExtendConfig.cmake  SparkTranslatorConfig.cmake  SparkWithGit.cmake  package-deb.descript  package_config.cmake  spark-appimage.desktop.in  spark-appimage.desktop.in.txt  spark-deb-package.descript  spark-desktop.desktop.in  spark-desktop.desktop.in.txt
cmake/make-batch-powershell/: README.md  powershell-msvc-msbuild.mk  windows-msvc-ninja.bat
cmake/make-batch-powershell/alternative/: windows-mingw.mk  windows-msvc.mk  windows.bat  windows.mk
cmake/modules/: Notepad--.cmake  QScint.cmake  config.h.in
cmake/visualstudio/: CMakeSettings.json
cmake/vscode/: README.md  windows-vs-2022-cmake-ninja-qt6.json  windows-vs-2022-cmake-ninja.json
patchs/: README.md  base-39b61c737a6f38aaf4bb59e8eb6f8c438e48c06e-actor.patch  base-4c8661d74aa78ea504a9a2f8b06139d571caed3d-linux-qt6.patch  coconil-cmake-spark-deb-appimage.patch  coconil-cmake-version-3.16.patch  coconil-cmake-version-3.22.patch  fix-windows-qtcreator-build-fail.patch
src/: CmpareMode.cpp  CmpareMode.h  README.md  RealCompare.pro  RealCompare.qrc  RealCompare.rc  RealCompare.vcxproj  RealCompare.vcxproj.filters  aboutndd.cpp  aboutndd.ui  batchfindreplace.cpp  batchfindreplace.h  bigfilemessage.cpp  bigfilemessage.h  bigfilemessage.ui  changelog.txt  ctipwin.cpp  ctipwin.h  dectfilechanges.cpp  dectfilechanges.h  doctypelistview.cpp  draglineedit.cpp  encodeconvert.cpp  findresultwin.cpp  findresultwin.h  findwin.cpp  findwin.h  findwin.ui  langextset.cpp  langstyledefine.cpp  main.cpp  nddsetting.cpp  nddsetting.h  ndstyleditemdelegate.cpp  plugin.h  pluginGl.h  pluginmgr.cpp  qscidisplaywindow.cpp  qscidisplaywindow.h  qtlangset.cpp  (+16 more)
src/cceditor/: ccnotepad.cpp  ccnotepad.h  ccnotepad.ui  filemanager.cpp  filemanager.h
src/include/: pluginGl.h
src/plugin/: CMakeLists.txt  README.md  dev.cmake
src/plugin/TTS-plugin/: CMakeLists.txt  README.md  ndd_plugin_implement.cpp  ndd_plugin_implement.h  ndd_plugin_implement.ui  plugin.cpp
src/plugin/external-plugin/: CMakeLists.txt  ndd_plugin_implement.cpp  ndd_plugin_implement.h  plugin.cpp
src/plugin/external-plugin/external-plugin/: base.cpp
src/plugin/external-plugin/external-plugin/interface/: external.h
src/plugin/framework/: IPluginFramework.h  QtPlugin.md  framework-include.cmake  framework.cmake  pluginframeworkhelper.cpp  pluginframeworkhelper.h
src/plugin/framework-plugins/hello-simple/: buildin.qrc  hello.cpp  hello.h
src/plugin/framework-plugins/hello-simple/template/: plugintemplate.cpp  plugintemplate.h  plugintemplate.txt
src/plugin/framework-plugins/hello-simple/view/: createnewplugincodedialog.cpp  createnewplugincodedialog.h  createnewplugincodedialog.ui
src/plugin/framework-plugins/helloworld/: helloworld.cpp  helloworld.h  helloworldplugin.cpp
src/plugin/helloworld/: helloworld.vcxproj  helloworldexport.cpp  instanceobj.cpp  instanceobj.h  qttestclass.cpp  qttestclass.h
src/plugin/helloworld-next/: CMakeLists.txt
src/plugin/linux-terminal-plugin/: CMakeLists.txt  ndd_plugin_implement.cpp  ndd_plugin_implement.h  plugin.cpp
src/plugin/opencc-demo-plugin/: CMakeLists.txt  ndd_plugin_implement.cpp  ndd_plugin_implement.h  ndd_plugin_implement.ui  opencctask.cpp  opencctask.h  plugin.cpp
src/plugin/opencc-demo-plugin/cmake/: ExternalOpenCCGit.cmake
src/plugin/template-plugins/: plugin.cpp
src/plugin/template-plugins/base-plugin/: CMakeLists.txt  baseplugin.cpp  baseplugin.h  ndd_plugin_implement.cpp  ndd_plugin_implement.h  plugin.cpp
src/plugin/template-plugins/base-secondary-menu-plugin/: CMakeLists.txt  ndd_plugin_implement.cpp  ndd_plugin_implement.h  plugin.cpp
src/plugin/template-plugins/base-secondary-menu-plugin-v1/: CMakeLists.txt  ndd_plugin_implement.cpp  ndd_plugin_implement.h  plugin.cpp
src/plugin/template-plugins/base-secondary-menu-ui-plugin-v1/: CMakeLists.txt  ndd_plugin_implement.cpp  ndd_plugin_implement.h  ndd_plugin_implement.ui  plugin.cpp
src/plugin/template-plugins/base-secondary-plugin/: basesecondaryplugin.cpp  basesecondaryplugin.h
src/plugin/template-plugins/base-secondary-widget-plugin/: basesecondarywidgetplugin.cpp  basesecondarywidgetplugin.h  pluginviewer.cpp  pluginviewer.h  pluginviewer.ui
src/plugin/template-plugins/base-widget-plugin/: CMakeLists.txt  ndd_plugin_implement.cpp  ndd_plugin_implement.h  plugin.cpp
src/plugin/template-plugins/base-widget-ui-plugin/: CMakeLists.txt  ndd_plugin_implement.cpp  ndd_plugin_implement.h  ndd_plugin_implement.ui  plugin.cpp
src/plugin/test/: CMakeLists.txt  test.cpp
src/plugin/versionUpdate/: CMakeLists.txt  ndd_plugin_implement.cpp  ndd_plugin_implement.h  plugin.cpp  plugin.qrc
src/plugin/versionUpdate/StatusWidget/: statuswidget.cpp  statuswidget.h  statuswidget.ui
src/qscint/: CMakeLists.txt
src/qscint/src/: InputMethod.cpp  ListBoxQt.cpp  ListBoxQt.h  MacPasteboardMime.cpp  PlatQt.cpp  SciAccessibility.cpp  (+47 more)
src/qss/: black.qss  lightbluestyle.qss  mystyle.qss
src/utils/: pathutil.cpp  pathutil.h
vs2017_sln/: RealCompare.sln  helloworld.sln  qscintilla.sln
(+49 files in other folders)
